--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,14 +34,14 @@ checksum:
 snapshot:
   name_template: "{{ .Tag }}-next"
 dockers:
-  - goos: linux
-    goarch: amd64
-    skip_push: false
+  - skip_push: false
+    use_buildx: true
     dockerfile: Dockerfile
     image_templates:
       - quay.io/tauerbec/chart-testing:{{ .Tag }}
       - quay.io/tauerbec/chart-testing:latest
     build_flag_templates:
+      - --platform=linux/amd64,linux/arm64
       - --label=org.opencontainers.image.version={{ .Version }}
       - --label=org.opencontainers.image.revision={{ .Commit }}
       - --label=org.opencontainers.image.title={{ .ProjectName }}
