--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -38,10 +38,10 @@ dockers:
     use_buildx: true
     dockerfile: Dockerfile
     image_templates:
-      - quay.io/tauerbec/chart-testing:{{ .Tag }}
-      - quay.io/tauerbec/chart-testing:latest
+      - quay.io/tauerbec/chart-testing:{{ .Tag }}-amd64
+      - quay.io/tauerbec/chart-testing:latest-amd64
     build_flag_templates:
-      - --platform=linux/amd64,linux/arm64
+      - --platform=linux/amd64
       - --label=org.opencontainers.image.version={{ .Version }}
       - --label=org.opencontainers.image.revision={{ .Commit }}
       - --label=org.opencontainers.image.title={{ .ProjectName }}
@@ -54,3 +54,32 @@ dockers:
     extra_files:
       - etc/chart_schema.yaml
       - etc/lintconf.yaml
+  - skip_push: false
+    use_buildx: true
+    dockerfile: Dockerfile
+    image_templates:
+      - quay.io/tauerbec/chart-testing:{{ .Tag }}-arm64
+      - quay.io/tauerbec/chart-testing:latest-arm64
+    build_flag_templates:
+      - --platform=linux/arm64
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.revision={{ .Commit }}
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.created={{ .Date }}
+      - --label=org.opencontainers.image.description=ct - The chart testing tool
+      - --label=org.opencontainers.image.vendor=Helm
+      - --label=org.opencontainers.image.licenses=Apache-2.0
+      - --label=org.opencontainers.image.source=https://github.com/helm/chart-testing
+      - --label=org.opencontainers.image.authors=The Helm Authors
+    extra_files:
+      - etc/chart_schema.yaml
+      - etc/lintconf.yaml
+docker_manifests:
+- name_template: quay.io/tauerbec/chart-testing:latest
+  image_templates:
+  - quay.io/tauerbec/chart-testing:latest-amd64
+  - quay.io/tauerbec/chart-testing:latest-arm64
+- name_template: quay.io/tauerbec/chart-testing:{{ .Version }}
+  image_templates:
+  - quay.io/tauerbec/chart-testing:{{ .Version }}-amd64
+  - quay.io/tauerbec/chart-testing:{{ .Version }}-arm64
