--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -37,7 +37,7 @@ dockers:
   - skip_push: false
     dockerfile: Dockerfile
     image_templates:
-      - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-amd64
+#      - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-amd64
       - quay.io/tylerauerbeck/chart-testing:latest-amd64
     build_flag_templates:
       - --platform=linux/amd64
@@ -56,7 +56,7 @@ dockers:
   - skip_push: false
     dockerfile: Dockerfile
     image_templates:
-      - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-arm64
+#      - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-arm64
       - quay.io/tylerauerbeck/chart-testing:latest-arm64
     build_flag_templates:
       - --platform=linux/arm64/v8
@@ -77,7 +77,7 @@ docker_manifests:
   image_templates:
   - quay.io/tylerauerbeck/chart-testing:latest-amd64
   - quay.io/tylerauerbeck/chart-testing:latest-arm64
-- name_template: quay.io/tylerauerbeck/chart-testing:{{ .Tag }}
-  image_templates:
-  - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-amd64
-  - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-arm64
+#- name_template: quay.io/tylerauerbeck/chart-testing:{{ .Tag }}
+#  image_templates:
+#  - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-amd64
+#  - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-arm64
