--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -55,11 +55,13 @@ dockers:
       - etc/lintconf.yaml
   - skip_push: false
     dockerfile: Dockerfile
+    goarch: arm64
+    use: buildx
     image_templates:
-#      - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-arm64
+      - quay.io/tylerauerbeck/chart-testing:{{ .Tag }}-arm64
       - quay.io/tylerauerbeck/chart-testing:latest-arm64
     build_flag_templates:
-      - --platform=linux/arm64/v8
+      - --platform=linux/arm64
       - --label=org.opencontainers.image.version={{ .Version }}
       - --label=org.opencontainers.image.revision={{ .Commit }}
       - --label=org.opencontainers.image.title={{ .ProjectName }}
