Add workflow_dispatch to ci for testing
Signed-off-by: Tyler Auerbeck <tylerauerbeck@users.noreply.github.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches:
       - '*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: Version
+        required: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
